# binaryornot

./: .gitignore  .pep8  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  appveyor.yml  justfile  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  reuse.yaml
.reuse/: dep5
CHANGELOG/: 0.1.1.md  0.2.0.md  0.3.0.md  0.4.0.md  0.4.2.md  0.4.3.md  0.4.4.md  v0.5.0.md  v0.6.0.md
appveyor/: install.ps1  setup_build_env.cmd
binaryornot/: __init__.py  check.py  check.pyi  helpers.py
docs/: Makefile  api.md  authors.rst  binaryornot.rst  conf.py  contributing.rst  history.rst  index.md  index.rst  installation.md  installation.rst  make.bat  modules.rst  quickstart.rst  readme.rst  usage.md  usage.rst
scripts/: generate_fixtures.py  train_detector.py
src/binaryornot/: __init__.py  __main__.py  check.py  cli.py  helpers.py  tree.py
src/binaryornot/data/: binary_extensions.csv  binary_formats.csv  encodings.csv
tests/: test_binaryornot.py  test_check.py  test_encoding_coverage.py  test_encoding_warning.py  test_sdist.py
tests/files/: logo.heic  test.7z  test.arrow  test.avro  test.bc  test.bplist  test.bz2  test.cpio  test.dex  test.doc  test.jks  test.lz4  test.lzma  test.mid  test.pack  test.parquet  test.pcap  test.psd  test.rar  test.webm  test.zst
tests/isBinaryFile/: README.md
